--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -4,327 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Carga de datos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted_sql = pd.read_json('results/predicted_sql_zero_shot.json', orient='records')\n",
-    "ground_truth = pd.read_json('bird_db/ground_truth.json', orient='records')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>question_id</th>\n",
-       "      <th>gemini_1.5_Flash</th>\n",
-       "      <th>chatgpt_4mini</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>721</td>\n",
-       "      <td>SELECT COUNT(DISTINCT superhero.id) AS num_sup...</td>\n",
-       "      <td>SELECT COUNT(*) FROM superhero WHERE eye_colou...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>777</td>\n",
-       "      <td>SELECT gender.gender FROM superhero JOIN gende...</td>\n",
-       "      <td>SELECT g.gender FROM superhero s JOIN gender g...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>731</td>\n",
-       "      <td>SELECT COUNT(DISTINCT superhero.id) AS num_dc_...</td>\n",
-       "      <td>SELECT COUNT(*) FROM superhero WHERE publisher...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>759</td>\n",
-       "      <td>SELECT colour.colour FROM superhero JOIN colou...</td>\n",
-       "      <td>SELECT eye_colour_id FROM superhero ORDER BY w...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>837</td>\n",
-       "      <td>SELECT hero_id FROM hero_attribute JOIN attrib...</td>\n",
-       "      <td>SELECT hero_id FROM hero_attribute ORDER BY at...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   question_id                                   gemini_1.5_Flash  \\\n",
-       "0          721  SELECT COUNT(DISTINCT superhero.id) AS num_sup...   \n",
-       "1          777  SELECT gender.gender FROM superhero JOIN gende...   \n",
-       "2          731  SELECT COUNT(DISTINCT superhero.id) AS num_dc_...   \n",
-       "3          759  SELECT colour.colour FROM superhero JOIN colou...   \n",
-       "4          837  SELECT hero_id FROM hero_attribute JOIN attrib...   \n",
-       "\n",
-       "                                       chatgpt_4mini  \n",
-       "0  SELECT COUNT(*) FROM superhero WHERE eye_colou...  \n",
-       "1  SELECT g.gender FROM superhero s JOIN gender g...  \n",
-       "2  SELECT COUNT(*) FROM superhero WHERE publisher...  \n",
-       "3  SELECT eye_colour_id FROM superhero ORDER BY w...  \n",
-       "4  SELECT hero_id FROM hero_attribute ORDER BY at...  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predicted_sql.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>question_id</th>\n",
-       "      <th>ground_truth</th>\n",
-       "      <th>difficulty</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>717</td>\n",
-       "      <td>SELECT T3.power_name FROM superhero AS T1 INNE...</td>\n",
-       "      <td>simple</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>718</td>\n",
-       "      <td>SELECT COUNT(T1.hero_id) FROM hero_power AS T1...</td>\n",
-       "      <td>simple</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>719</td>\n",
-       "      <td>SELECT COUNT(T1.id) FROM superhero AS T1 INNER...</td>\n",
-       "      <td>moderate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>720</td>\n",
-       "      <td>SELECT DISTINCT T1.full_name FROM superhero AS...</td>\n",
-       "      <td>simple</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>721</td>\n",
-       "      <td>SELECT COUNT(T1.id) FROM superhero AS T1 INNER...</td>\n",
-       "      <td>simple</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   question_id                                       ground_truth difficulty\n",
-       "0          717  SELECT T3.power_name FROM superhero AS T1 INNE...     simple\n",
-       "1          718  SELECT COUNT(T1.hero_id) FROM hero_power AS T1...     simple\n",
-       "2          719  SELECT COUNT(T1.id) FROM superhero AS T1 INNER...   moderate\n",
-       "3          720  SELECT DISTINCT T1.full_name FROM superhero AS...     simple\n",
-       "4          721  SELECT COUNT(T1.id) FROM superhero AS T1 INNER...     simple"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ground_truth.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zero_shot = pd.merge(predicted_sql, ground_truth, on='question_id')\n",
-    "zero_shot = zero_shot.sort_values(by='question_id').reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>question_id</th>\n",
-       "      <th>gemini_1.5_Flash</th>\n",
-       "      <th>chatgpt_4mini</th>\n",
-       "      <th>ground_truth</th>\n",
-       "      <th>difficulty</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>717</td>\n",
-       "      <td>SELECT superpower.power_name FROM superhero JO...</td>\n",
-       "      <td>SELECT sp.power_name FROM superpower sp JOIN h...</td>\n",
-       "      <td>SELECT T3.power_name FROM superhero AS T1 INNE...</td>\n",
-       "      <td>simple</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>718</td>\n",
-       "      <td>SELECT COUNT(*) FROM superhero JOIN hero_power...</td>\n",
-       "      <td>SELECT COUNT(DISTINCT hp.hero_id) AS superhero...</td>\n",
-       "      <td>SELECT COUNT(T1.hero_id) FROM hero_power AS T1...</td>\n",
-       "      <td>simple</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>719</td>\n",
-       "      <td>SELECT COUNT(*) FROM superhero s JOIN hero_pow...</td>\n",
-       "      <td>SELECT COUNT(DISTINCT s.id) AS super_strength_...</td>\n",
-       "      <td>SELECT COUNT(T1.id) FROM superhero AS T1 INNER...</td>\n",
-       "      <td>moderate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>720</td>\n",
-       "      <td>SELECT superhero.full_name FROM superhero JOIN...</td>\n",
-       "      <td>SELECT s.full_name FROM superhero s JOIN hero_...</td>\n",
-       "      <td>SELECT DISTINCT T1.full_name FROM superhero AS...</td>\n",
-       "      <td>simple</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>721</td>\n",
-       "      <td>SELECT COUNT(DISTINCT superhero.id) AS num_sup...</td>\n",
-       "      <td>SELECT COUNT(*) FROM superhero WHERE eye_colou...</td>\n",
-       "      <td>SELECT COUNT(T1.id) FROM superhero AS T1 INNER...</td>\n",
-       "      <td>simple</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   question_id                                   gemini_1.5_Flash  \\\n",
-       "0          717  SELECT superpower.power_name FROM superhero JO...   \n",
-       "1          718  SELECT COUNT(*) FROM superhero JOIN hero_power...   \n",
-       "2          719  SELECT COUNT(*) FROM superhero s JOIN hero_pow...   \n",
-       "3          720  SELECT superhero.full_name FROM superhero JOIN...   \n",
-       "4          721  SELECT COUNT(DISTINCT superhero.id) AS num_sup...   \n",
-       "\n",
-       "                                       chatgpt_4mini  \\\n",
-       "0  SELECT sp.power_name FROM superpower sp JOIN h...   \n",
-       "1  SELECT COUNT(DISTINCT hp.hero_id) AS superhero...   \n",
-       "2  SELECT COUNT(DISTINCT s.id) AS super_strength_...   \n",
-       "3  SELECT s.full_name FROM superhero s JOIN hero_...   \n",
-       "4  SELECT COUNT(*) FROM superhero WHERE eye_colou...   \n",
-       "\n",
-       "                                        ground_truth difficulty  \n",
-       "0  SELECT T3.power_name FROM superhero AS T1 INNE...     simple  \n",
-       "1  SELECT COUNT(T1.hero_id) FROM hero_power AS T1...     simple  \n",
-       "2  SELECT COUNT(T1.id) FROM superhero AS T1 INNER...   moderate  \n",
-       "3  SELECT DISTINCT T1.full_name FROM superhero AS...     simple  \n",
-       "4  SELECT COUNT(T1.id) FROM superhero AS T1 INNER...     simple  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zero_shot.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Resultados"
    ]
   },
@@ -335,6 +14,9 @@
    "outputs": [],
    "source": [
     "import tests\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "db_path = 'bird_db/superhero.sqlite'"
    ]
@@ -343,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Zero-Shot  11"
+    "## Zero-Shot"
    ]
   },
   {
