--- a/llm_api.ipynb
+++ b/llm_api.ipynb
@@ -9,25 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the Python SDK\n",
     "import google.generativeai as genai\n",
     "from openai import OpenAI\n",
     "import pandas as pd\n",
     "\n",
     "import os\n",
     "\n",
-    "#GOOGLE_API_KEY=\"AIzaSyDKm5dvTpqlApCyg-WGvTk2WczjDEQLk-c\"\n",
-    "#GOOGLE_API_KEY = os.environ.get('GOOGLE_API_KEY') \n",
-    "\n",
     "client_gpt = OpenAI(api_key=os.environ.get(\"OPENAI_API_KEY\"))\n",
     "\n",
-    "client_gemini = genai.configure(api_key=os.environ.get('GOOGLE_API_KEY'))\n",
-    "\n",
-    "#genai.configure(api_key=GOOGLE_API_KEY)"
+    "client_gemini = genai.configure(api_key=os.environ.get('GOOGLE_API_KEY'))"
    ]
   },
   {
@@ -173,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +191,7 @@
     "completion = client_gpt.chat.completions.create(\n",
     "  model=\"gpt-4o-mini\",\n",
     "  messages=[\n",
-    "    {\"role\": \"user\", \"content\": \"Tell a good joke in the form of a question. Do not yet give the answer.\"}\n",
+    "    {\"role\": \"user\", \"content\": prompt+row['question']}\n",
     "  ]\n",
     ")"
    ]
